[workspace]
members = [
    "worky-common",
    "worky-ops",
    "worky-runtime",
    "worky-api",
    "worky-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.7"
hyper = { version = "1.8.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_core = "0.354.0"
deno_console = "0.212.0"
deno_url = "0.212.0"
deno_web = "0.243.0"
deno_webidl = "0.212.0"
deno_websocket = "0.217.0"
deno_http = "0.210.0"
deno_fetch = "0.236.0"
deno_permissions = "0.71.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
