[workspace]
members = [
  "worky-common",
  "worky-ops",
  "worky-runtime",
  "worky-api",
  "worky-cli",
  "worky-socket",
  "worky-daemon",
  "worky-extensions",
  "worky-store"
]
resolver = "2"

[workspace.package]
authors = ["makano"]
edition = "2021"
license = "MIT"
version = "0.0.1"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.18"
interprocess = "2.2.3"
clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = "0.3.0"
anyhow = "1.0.100"
thiserror = "^2.0.3"

axum = "0.8.7"
hyper = { version = "1.8.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

deno_core = "0.354.0"
deno_console = "0.212.0"
deno_url = "0.212.0"
deno_web = "0.243.0"
deno_webidl = "0.212.0"
deno_websocket = "0.217.0"
deno_fetch = "0.236.0"
deno_permissions = "0.71.0"
deno_error = "0.7.0"
deno_net = "0.204.0"
deno_telemetry = "0.34.0"
deno_tls = "0.199.0"
