[package]
name = "worky-api"
version = "0.1.0"
edition = "2021"

[dependencies]
worky-common = { path = "../worky-common" }
worky-runtime = { path = "../worky-runtime" }
worky-store = { path = "../worky-store" }
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
deno_core = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
