[package]
name = "worky-cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
worky-api = { path = "../worky-api" }
worky-runtime = { path = "../worky-runtime" }
worky-socket = { path = "../worky-socket" }
worky-common = { path = "../worky-common" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
interprocess = { workspace = true }
serde_json = { workspace = true }
