[package]
name = "worky-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
worky-common = { path = "../worky-common" }
deno_core = { workspace = true }
deno_console = { workspace = true }
deno_url = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
deno_websocket = { workspace = true }
deno_http = { workspace = true }
deno_fetch = { workspace = true }
deno_permissions = { workspace = true }
