[package]
name = "worky-socket"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
worky-common = { path = "../worky-common" }
serde = { workspace = true }
serde_json = { workspace = true }
interprocess = { workspace = true }
anyhow = { workspace = true }
