[package]
name = "worky-store"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
worky-runtime = { path = "../worky-runtime" }
worky-common = { path = "../worky-common" }
worky-api = { path = "../worky-api" }
lazy_static = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
deno_core = { workspace = true }
hyper = { workspace = true }
